Making all text updatable so it can easily be used with different languages.
git-svn-id: https://plugins.svn.wordpress.org/responsive-cookie-banner/trunk@898874 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/style.css
+++ b/style.css
@@ -76,11 +76,13 @@
 
 #cookie-banner-container .right input[type="submit"]:hover{
 	background-color: #357AE8;
+	cursor:pointer;
 }
 
 #cookie-banner-container .right input[type="submit"]:active{
 	-mox-box-shadow: none;
 	box-shadow: none;
+	cursor:pointer;
 }
 
 #cookie-banner-container .right p a{
