--- a/css/rcb.less
+++ b/css/rcb.less
@@ -24,7 +24,6 @@
 	width: 100%;
 	background-color: #F7F7F7;
 	position: relative;
-	display: none; 
 	font-family: 'Open Sans';
 	font-weight: 600; 
 	font-size: 15px;
@@ -33,7 +32,7 @@
 	box-sizing: content-box; 
 	line-height: 1;
 	letter-spacing: 0;
-	z-index: 9999999;
+	z-index: 1000;
 
 #cookie-banner-container{
 	width: 1000px;
